@@ -17,7 +17,13 @@ esac
 
 cp -r configuration ${CONFIGDIR}
 
-java -Xmx${MEMORY} -Dosgi.locking=none -Dosgi.configuration.area=${CONFIGDIR} $FLAG -XX:MaxPermSize=128M -XX:+UseG1GC -jar plugins/org.eclipse.equinox.launcher.jar $@ 
+ulimit -S -v unlimited
+ulimit -S -s unlimited
+ulimit -S -s unlimited
+
+export MALLOC_ARENA_MAX=1
+
+java -Xms64m -Xmx${MEMORY} -Dosgi.locking=none -Dosgi.configuration.area=${CONFIGDIR} $FLAG -XX:ReservedCodeCacheSize=128m -XX:MaxMetaspaceSize=128m -XX:CompressedClassSpaceSize=128m -XX:+UseG1GC -XX:ParallelGCThreads=1 -jar plugins/org.eclipse.equinox.launcher.jar -consoleLog $@ 
 
 RETURNCODE=$?
 
